--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "simpleCalc",
+  "author": "Rafael Espinoza <rafael@rafaelespinoza.com> (http://www.rafaelespinoza.com)",
   "version": "0.1.1",
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-recess": "^0.7.0"
-  }
+    "grunt-recess": "^0.7.0",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-watch": "^0.6.1"
+  },
+  "private": true
 }
