--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "grunt": "^0.4.5",
     "grunt-recess": "^0.7.0",
     "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-browserify": "~3.0.0"
   },
   "private": true
 }
