--- a/package.json
+++ b/package.json
@@ -1,13 +1,27 @@
 {
   "name": "simpleCalc",
   "author": "Rafael Espinoza <rafael@rafaelespinoza.com> (http://www.rafaelespinoza.com)",
-  "version": "0.1.1",
+  "version": "0.1.2",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
+  },
+  "dependencies": {
+    "express": "~4.2.0",
+    "static-favicon": "~1.0.0",
+    "morgan": "~1.0.0",
+    "cookie-parser": "~1.0.1",
+    "body-parser": "~1.0.0",
+    "debug": "~0.7.4",
+    "jade": "~1.3.0",
+    "less-middleware": "1.0.x"
+  },
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-recess": "^0.7.0",
+    "grunt-browserify": "^3.0.0",
+    "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-browserify": "~3.0.0"
-  },
-  "private": true
+    "grunt-recess": "^0.7.0"
+  }
 }
