--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-less": "^0.11.4",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-recess": "^0.7.0"
+    "grunt-lesslint": "^1.1.10"
   }
 }
