Clean up & restructure application, see below:
- Remove & replace unneeded dependencies
- Restructure application, middleware & task configuration files
- Update build steps

Squashed commit of the following:

commit 5443cfa99941079745f7a00207b0240febf47d25
Author: Rafael Espinoza <rafael@rafaelespinoza.com>
Date:   Wed May 18 12:30:18 2016 -0700

    Remove jade

    It's a static app, no need for a template engine

commit d1c09d0e5d3c7643810fa74735fc66ce33db39d1
Author: Rafael Espinoza <rafael@rafaelespinoza.com>
Date:   Wed May 18 12:27:15 2016 -0700

    Add favicon middleware

    It just serves a blank favicon for now. Browser will request for
    favicon every now & then, and not having a favicon leads to errors!

commit 88f09b8e34158f0698ed790d97cf24a7426b4d20
Author: Rafael Espinoza <rafael@rafaelespinoza.com>
Date:   Wed May 18 11:57:16 2016 -0700

    Add prestart build step

commit 83ba9341f31c2fda86ee3a29f7c1b2475cf85acf
Author: Rafael Espinoza <rafael@rafaelespinoza.com>
Date:   Wed May 18 11:54:52 2016 -0700

    Reconfigure public js files

    - Ignore the built js files (already tracking the source)
    - Move jquery files
    - Update references from pub/index

commit d2500f2694807afbbb994037dbeafcc41ab87fd4
Author: Rafael Espinoza <rafael@rafaelespinoza.com>
Date:   Wed May 18 12:00:01 2016 -0700

    Refactor middleware configuration

commit 4bdc788593570417517429ecdd2b870088c7f5ba
Author: Rafael Espinoza <rafael@rafaelespinoza.com>
Date:   Wed May 18 11:33:38 2016 -0700

    add jshintrc

    I want to use 'const' in a few places

commit 5f684979302a9e66bda8e381535bece500406d57
Author: Rafael Espinoza <rafael@rafaelespinoza.com>
Date:   Wed May 18 11:02:49 2016 -0700

    Remove three dependencies

commit 8e3c96a3c3ec8c9b1f42635716b34ade0d4ba453
Author: Rafael Espinoza <rafael@rafaelespinoza.com>
Date:   Wed May 18 10:57:27 2016 -0700

    Remove routes

    They are useless, this application is static. There are no users.

commit 32078e7117d6c

--- a/package.json
+++ b/package.json
@@ -4,17 +4,16 @@
   "version": "0.1.2",
   "private": true,
   "scripts": {
+    "prestart": "grunt build",
     "start": "node ./bin/www"
   },
+  "main": "index.js",
   "dependencies": {
-    "express": "~4.2.0",
-    "static-favicon": "~1.0.0",
-    "morgan": "~1.0.0",
-    "cookie-parser": "~1.0.1",
-    "body-parser": "~1.0.0",
     "debug": "~0.7.4",
-    "jade": "~1.3.0",
-    "less-middleware": "1.0.x"
+    "express": "~4.2.0",
+    "less-middleware": "1.0.x",
+    "morgan": "~1.0.0",
+    "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
